# torch_ops

./: .gitignore  CMakeLists.txt  requirements.txt  run.sh  setup.py  start.sh  test.py
include/: matmul.h
op/: __init__.py  matmul.py
src/: matmul.cpp  matmul.cu  matmul_kernel.cu
src/cuda/: matmul.cu
src/torch_ops/: __init__.py  matmul.py  matmul_op.py
tests/: test.py
