cmake_minimum_required(VERSION 3.12)
project(myop LANGUAGES CXX CUDA)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CUDA_STANDARD 17)
SET(CMAKE_CUDA_STANDARD_REQUIRED ON)
SET(CMAKE_CUDA_ARCHITECTURES 86)
set(CMAKE_CUDA_COMPILER "/usr/local/cuda/bin/nvcc")
find_package(CUDA REQUIRED)
set(pybind11_DIR /usr/local/lib/python3.11/dist-packages/pybind11/share/cmake/pybind11)
find_package(pybind11 REQUIRED)
set(Torch_DIR /usr/local/lib/python3.11/dist-packages/torch/share/cmake/Torch)
find_package(Torch REQUIRED)
find_library(TORCH_PYTHON_LIBRARY torch_python PATHS "${TORCH_INSTALL_PREFIX}/lib")
# 打印变量
message(STATUS "TORCH_INCLUDE_DIRS: ${TORCH_INCLUDE_DIRS}")
message(STATUS "TORCH_INSTALL_PREFIX: ${TORCH_INSTALL_PREFIX}")
message(STATUS "TORCH_LIBRARIES: ${TORCH_LIBRARIES}")
message(STATUS "TORCH_PYTHON_LIBRARY: ${TORCH_PYTHON_LIBRARY}")
include_directories(include)
pybind11_add_module(torch_ops_matmul src/matmul_kernel.cu src/matmul.cpp)
target_link_libraries(torch_ops_matmul PRIVATE ${TORCH_LIBRARIES} ${TORCH_PYTHON_LIBRARY})
